Fix weird word breaks on edition action panel

--- a/sass/ascribe_panel.scss
+++ b/sass/ascribe_panel.scss
@@ -26,7 +26,7 @@
         vertical-align: middle;
 
         &:first-child {
-            word-break: break-all;
+            word-break: break-word;
             font-size: .9em;
         }
     }
